--- a/backend/gpstracker/src/main/resources/application.properties
+++ b/backend/gpstracker/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-logging.level.root=debug
-logging.level.web=debug
+#logging.level.root=debug
+#logging.level.web=debug
 
 spring.data.mongodb.host=${dbdomain:localhost} 
 spring.data.mongodb.port=27017
